@@ -1,3 +1,9 @@
+2012-08-13  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-arglists.lisp (extra-keywords/slots): Check for
+	slot-definition-initfunction being present before calling
+	slot-definition-initform.
+
 2012-08-04  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-arglists.lisp (test-print-arglist): bind
